# matrix

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  README_CN.md  agents_langgraph_enhanced.py  config.py  fetcher.py  graph_builder.py  main.py  main_graph.py  notion_sink.py  pyproject.toml  sniper.py  test_langgraph.py  visualize_graph.py  writer.py
.omc/state/: idle-notif-cooldown.json  last-tool-error.json
docs/: QUICKSTART-MULTI-SOURCE.md  ai-frameworks-analysis.md  image-renderer-guide.md  langgraph-enhancements.md  langgraph-exploration.md  langgraph-refactor.md  langgraph-strict-architecture.md  multi-source-input.md  notion-tools-guide.md  third-party-api.md
docs/images/: README.md
scripts/: visualize_graph.py
sources/: __init__.py  manual_source.py  note_source.py  rss_source.py
src/matrix/: __init__.py  config.py  main.py
src/matrix/agents/: agents.py  agents_langgraph.py  agents_langgraph_enhanced.py
src/matrix/core/: sniper.py  writer.py
src/matrix/core/prompts/: README.md  sniper_system.txt  writer_system.txt
src/matrix/graph/: graph_builder.py  main_graph.py
src/matrix/renderers/: image_renderer.py
src/matrix/sinks/: notion_sink.py
src/matrix/utils/: __init__.py  client.py  logger.py
tests/: create_test_images.py  debug_api.py  test_graph.py  test_graph_mock.py  test_image_renderer.py  test_langgraph.py  test_multi_source.py  test_note_flow.py  test_notion_tools.py  test_real_workflow.py  test_strict_graph.py  test_third_party_api.py
tools/: __init__.py  notion_tools.py
